Add run config; Clean up

--- a/src/main/resources/baumann/javaassignment/assignment/main-view.fxml
+++ b/src/main/resources/baumann/javaassignment/assignment/main-view.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="511.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/11.0.14-internal" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="511.0" prefWidth="862.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
     <BorderPane AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <center>
             <VBox>
@@ -102,7 +102,7 @@
                                     <Button mnemonicParsing="false" onAction="#onAddItemClick" styleClass="blue" text="Add Item" />
                                     <Button mnemonicParsing="false" onAction="#onEditItemClick" text="Edit Item" />
                                     <Button mnemonicParsing="false" onAction="#onDeleteItemClick" styleClass="red" text="Delete Item(s)" />
-                                    <Label fx:id="labelItemFeedback" maxHeight="1.7976931348623157E308" text="Label" textFill="RED" HBox.hgrow="ALWAYS" />
+                                    <Label fx:id="labelItemFeedback" maxHeight="1.7976931348623157E308" textFill="RED" HBox.hgrow="ALWAYS" />
                                 </HBox>
                             </VBox>
                             <VBox fx:id="modifyItemPanel" prefHeight="200.0" prefWidth="100.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
@@ -135,11 +135,11 @@
                                         <Label text="Author" />
                                         <TextField fx:id="modifyItemAuthor" />
                                     </VBox>
-                                    <Label fx:id="labelModifyItemFeedback" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" text="Label" textFill="RED" GridPane.rowIndex="1" />
                                 </GridPane>
                                 <HBox fillHeight="false" spacing="12.0" VBox.vgrow="NEVER">
                                     <Button mnemonicParsing="false" onAction="#onSubmitModifyItem" styleClass="blue" text="Submit" />
                                     <Button mnemonicParsing="false" onAction="#onCancelModifyItem" text="Cancel" />
+                                    <Label fx:id="labelModifyItemFeedback" alignment="TOP_LEFT" maxHeight="1.7976931348623157E308" textFill="RED" />
                                 </HBox>
                             </VBox>
                         </AnchorPane>
@@ -227,7 +227,7 @@
                                     <Button fx:id="btnAddMember" mnemonicParsing="false" onAction="#onAddMember" styleClass="blue" text="Add member" />
                                     <Button fx:id="btnEditMember" mnemonicParsing="false" onAction="#onEditMember" text="Edit member" />
                                     <Button fx:id="btnDeleteMembers" mnemonicParsing="false" onAction="#onDeleteMembers" styleClass="red" text="Delete member(s)" />
-                                    <Label fx:id="labelMemberFeedback" alignment="TOP_LEFT" contentDisplay="TOP" maxHeight="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" text="asd" textFill="RED">
+                                    <Label fx:id="labelMemberFeedback" alignment="TOP_LEFT" contentDisplay="TOP" maxHeight="1.7976931348623157E308" nodeOrientation="LEFT_TO_RIGHT" textFill="RED">
                                         <opaqueInsets>
                                             <Insets />
                                         </opaqueInsets>
